# atomic-rollback

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  atomic-rollback.conf  atomic-rollback.spec
.copr/: Makefile
.github/workflows/: ci.yml  pr-fragment.yml  pr-task-list.yml
crates/atomic-rollback/src/: check.rs  consts.rs  grub.rs  kernel_hook.rs  main.rs  platform.rs  proof.rs  rollback.rs  tools.rs
crates/changelog/: Cargo.toml  build.rs
crates/changelog-core/: Cargo.toml
crates/changelog-core/src/: lib.rs
docs/standards/: changelog-fragments.md
hooks/: 90-atomic-rollback.install
plugins/: atomic-rollback.actions  atomic_rollback.c  macros.transaction_atomic_rollback
scripts/: monitor-reddit.sh
src/: check.rs  consts.rs  grub.rs  kernel_hook.rs  main.rs  migrate.rs  parse.rs  platform.rs  proof.rs  rollback.rs  snapshot.rs  swap.rs  tools.rs
